Add possibility to open hyperlinks