@@ -7,8 +7,8 @@ import javafx.scene.control.ListView;
 import pl.edu.agh.student.oop.webcrawler.frontend.views.results.model.Result;
 import pl.edu.agh.student.oop.webcrawler.frontend.views.results.model.ResultListCell;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.LocalDateTime;
 
 public class ResultListPresenter {
@@ -16,13 +16,13 @@ public class ResultListPresenter {
     private ListView<Result> list;
 
     @FXML
-    public void initialize() throws MalformedURLException {
+    public void initialize() throws URISyntaxException {
         list.setCellFactory(ResultListCell::new);
 
         ObservableList<Result> items = FXCollections.observableArrayList(Result.builder()
                 .matchedText("asdf")
                 .creationDate(LocalDateTime.now())
-                .source(new URL("http://google.com"))
+                .source(new URI("http://google.com"))
                 .build());
         list.setItems(items);
     }
